--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -1,12 +1,14 @@
 ﻿<!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Блокнот</title>
+    <title>Notepad</title>
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/png">
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    <my-app>Загрузка...</my-app>
+    <my-app>Loading...</my-app>
 </body>
 </html>
 
