--- a/MyNotes/wwwroot/index.html
+++ b/MyNotes/wwwroot/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Notepad</title>
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/png">
+    <link rel="stylesheet" href="./index.css">
 <link rel="stylesheet" href="styles.css"></head>
 <body>
     <my-app>Loading...</my-app>
-<script src="runtime-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule defer></script><script src="polyfills-es5.js" nomodule defer></script><script src="polyfills-es2015.js" type="module"></script><script src="vendor-es2015.js" type="module"></script><script src="vendor-es5.js" nomodule defer></script><script src="main-es2015.js" type="module"></script><script src="main-es5.js" nomodule defer></script></body>
+<script src="runtime-es2020.js" type="module"></script><script src="runtime-es5.js" nomodule defer></script><script src="polyfills-es5.js" nomodule defer></script><script src="polyfills-es2020.js" type="module"></script><script src="vendor-es2020.js" type="module"></script><script src="vendor-es5.js" nomodule defer></script><script src="main-es2020.js" type="module"></script><script src="main-es5.js" nomodule defer></script></body>
 </html>
 
